--- a/Random Quote Generator/index.html
+++ b/Random Quote Generator/index.html
@@ -5,8 +5,9 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<button type="button" id="quoteButton">Random Quote</button>
 <body>
+	<h1>Random Quote Generator</h1>
+	<button type="button" id="quoteButton">Random Quote</button>
 	<p id="quoteElement">Quote</p>
 </body>
 <script src="quotes.js"></script>
